--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories("./mavlink_indoor_sdk/src")
 add_executable(tcp_telemetry_test tcp_telemetry_test.cpp)
 add_executable(udp_telemetry_test udp_telemetry_test.cpp)
 
-add_executable(tcp_vpe_sender tcp_vpe_sender.cpp)
+add_executable(udp_vpe_sender udp_vpe_sender.cpp)
 
 # add_executable(hwer hwer.cpp)
 target_link_libraries(tcp_telemetry_test
@@ -32,7 +32,7 @@ target_link_libraries(udp_telemetry_test
 
 find_package( OpenCV REQUIRED )
 
-target_link_libraries(tcp_vpe_sender
+target_link_libraries(udp_vpe_sender
     #mavlink_indoor_sdk
     ${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/libmavlink_indoor_sdk.so
     pthread
