--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,44 +3,48 @@ project (Mavilink_Indoor_SDK)
 
 add_definitions("-D_USE_MATH_DEFINES")
 add_definitions("-std=gnu++11")
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+# add_definitions("-rpath-link")
 
-include_directories("./src")
-include_directories("./mavlink_indoor_sdk/mavlink/v2.0/common")
+include_directories(${PROJECT_SOURCE_DIR}/src)
+include_directories(${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/mavlink/v2.0/common)
 
 # Markers
-include_directories("./markers_lib/src")
+include_directories(${PROJECT_SOURCE_DIR}/markers_lib/src)
 
 #SDK
-include_directories("./mavlink_indoor_sdk/src")
+include_directories(${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/src)
+
+find_package( OpenCV REQUIRED )
+include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 # set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 add_executable(tcp_telemetry_test tcp_telemetry_test.cpp)
 add_executable(udp_telemetry_test udp_telemetry_test.cpp)
-
 add_executable(udp_vpe_sender udp_vpe_sender.cpp)
 
 # add_executable(hwer hwer.cpp)
 target_link_libraries(tcp_telemetry_test
-    #mavlink_indoor_sdk
+    # mavlink_indoor_sdk
     ${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/${DEP2_BUILD_DIR}/libmavlink_indoor_sdk.so
     pthread
 )
 
 target_link_libraries(udp_telemetry_test
-    #mavlink_indoor_sdk
+    # mavlink_indoor_sdk
     ${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/${DEP2_BUILD_DIR}/libmavlink_indoor_sdk.so
     pthread
 )
 
-find_package( OpenCV REQUIRED )
-
 target_link_libraries(udp_vpe_sender
-    #mavlink_indoor_sdk
+    # mavlink_indoor_sdk
+    ${OpenCV_LIBS}
     ${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/${DEP2_BUILD_DIR}/libmavlink_indoor_sdk.so
     pthread
     ${PROJECT_SOURCE_DIR}/markers_lib/${DEP2_BUILD_DIR}/libmarkers_lib.so
-    ${OpenCV_LIBS}
+
 )
 
 
