--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ CMakeFiles/*
 *.cmake
 CMakeCache.txt
 Makefile
-tcp_telemetry_test
-udp_telemetry_test
-tcp_vpe_sender
-udp_vpe_sender
+*tcp_telemetry_test
+*udp_telemetry_test
+*tcp_vpe_sender
+*udp_vpe_sender
 build*/
