--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,14 +16,35 @@ include_directories(${PROJECT_SOURCE_DIR}/markers_lib/src)
 #SDK
 include_directories(${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/src)
 
+#img sender
+include_directories(${PROJECT_SOURCE_DIR}/opencv_image_transfer/src)
+
+
+
+#OpenCV
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
+
+#zmq
+# pkg_check_modules(PC_ZeroMQ QUIET zmq)
+find_path(ZeroMQ_INCLUDE_DIR
+    NAMES zmq.hpp
+    PATHS ${PC_ZeroMQ_INCLUDE_DIRS}
+)
+
+# ## use the hint from about to find the location of libzmq
+find_library(ZeroMQ_LIBRARY
+    NAMES zmq
+    PATHS ${PC_ZeroMQ_LIBRARY_DIRS}
+)
+include_directories(${ZeroMQ_INCLUDE_DIR})
+
 
 # set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 add_executable(tcp_telemetry_test src/tcp_telemetry_test.cpp)
 add_executable(udp_telemetry_test src/udp_telemetry_test.cpp)
-add_executable(udp_vpe_sender src/udp_vpe_sender.cpp)
+add_executable(udp_vpe_sender     src/udp_vpe_sender.cpp)
 
 # add_executable(hwer hwer.cpp)
 target_link_libraries(tcp_telemetry_test
@@ -44,26 +65,12 @@ target_link_libraries(udp_vpe_sender
     ${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/${DEP2_BUILD_DIR}/libmavlink_indoor_sdk.so
     pthread
     ${PROJECT_SOURCE_DIR}/markers_lib/${DEP2_BUILD_DIR}/libmarkers_lib.so
-
+    ${PROJECT_SOURCE_DIR}/opencv_image_transfer/${DEP2_BUILD_DIR}/libopencv_image_transfer.so
 )
 
 
-#zmq
-
-
-# pkg_check_modules(PC_ZeroMQ QUIET zmq)
-# find_path(ZeroMQ_INCLUDE_DIR
-#     NAMES zmq.hpp
-#     PATHS ${PC_ZeroMQ_INCLUDE_DIRS}
-# )
-
-# ## use the hint from about to find the location of libzmq
-# find_library(ZeroMQ_LIBRARY
-#     NAMES zmq
-#     PATHS ${PC_ZeroMQ_LIBRARY_DIRS}
-# )
 # add_executable(zmq_copter zmq_copter.cpp)
 
-# target_include_directories(zmq_copter ${ZeroMQ_INCLUDE_DIR})
+
 # ## at the 0mq library to our link directive
-# target_link_libraries(zmq_copter ${ZeroMQ_LIBRARY})
+target_link_libraries(udp_vpe_sender ${ZeroMQ_LIBRARY})
