--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 # add_definitions("-rpath-link")
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
-include_directories(${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/mavlink/v2.0/common)
+include_directories(${PROJECT_SOURCE_DIR}/mavlink_drone_sdk/mavlink/v2.0/common)
 
 # Markers
 include_directories(${PROJECT_SOURCE_DIR}/markers_lib/src)
 
 #SDK
-include_directories(${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/src)
+include_directories(${PROJECT_SOURCE_DIR}/mavlink_drone_sdk/src)
 
 #img sender
 include_directories(${PROJECT_SOURCE_DIR}/opencv_image_transfer/src)
@@ -27,17 +27,17 @@ include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 #zmq
 # pkg_check_modules(PC_ZeroMQ QUIET zmq)
-find_path(ZeroMQ_INCLUDE_DIR
-    NAMES zmq.hpp
-    PATHS ${PC_ZeroMQ_INCLUDE_DIRS}
-)
+# find_path(ZeroMQ_INCLUDE_DIR
+#     NAMES zmq.hpp
+#     PATHS ${PC_ZeroMQ_INCLUDE_DIRS}
+# )
 
-# ## use the hint from about to find the location of libzmq
-find_library(ZeroMQ_LIBRARY
-    NAMES zmq
-    PATHS ${PC_ZeroMQ_LIBRARY_DIRS}
-)
-include_directories(${ZeroMQ_INCLUDE_DIR})
+# # ## use the hint from about to find the location of libzmq
+# find_library(ZeroMQ_LIBRARY
+#     NAMES zmq
+#     PATHS ${PC_ZeroMQ_LIBRARY_DIRS}
+# )
+# include_directories(${ZeroMQ_INCLUDE_DIR})
 
 
 # set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
@@ -48,24 +48,24 @@ add_executable(udp_vpe_sender     src/udp_vpe_sender.cpp)
 
 # add_executable(hwer hwer.cpp)
 target_link_libraries(tcp_telemetry_test
-    # mavlink_indoor_sdk
-    ${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/${DEP2_BUILD_DIR}/libmavlink_indoor_sdk.so
+    # mavlink_drone_sdk
+    ${PROJECT_SOURCE_DIR}/mavlink_drone_sdk/${DEP2_BUILD_DIR}/libmavlink_drone_sdk.so
     pthread
 )
 
 target_link_libraries(udp_telemetry_test
-    # mavlink_indoor_sdk
-    ${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/${DEP2_BUILD_DIR}/libmavlink_indoor_sdk.so
+    # mavlink_drone_sdk
+    ${PROJECT_SOURCE_DIR}/mavlink_drone_sdk/${DEP2_BUILD_DIR}/libmavlink_drone_sdk.so
     pthread
 )
 
 target_link_libraries(udp_vpe_sender
-    # mavlink_indoor_sdk
+    # mavlink_drone_sdk
     ${OpenCV_LIBS}
-    ${PROJECT_SOURCE_DIR}/mavlink_indoor_sdk/${DEP2_BUILD_DIR}/libmavlink_indoor_sdk.so
+    ${PROJECT_SOURCE_DIR}/mavlink_drone_sdk/${DEP2_BUILD_DIR}/libmavlink_drone_sdk.so
     pthread
     ${PROJECT_SOURCE_DIR}/markers_lib/${DEP2_BUILD_DIR}/libmarkers_lib.so
-    ${PROJECT_SOURCE_DIR}/opencv_image_transfer/${DEP2_BUILD_DIR}/libopencv_image_transfer.so
+    # ${PROJECT_SOURCE_DIR}/opencv_image_transfer/${DEP2_BUILD_DIR}/libopencv_image_transfer.so
 )
 
 
@@ -73,4 +73,4 @@ target_link_libraries(udp_vpe_sender
 
 
 # ## at the 0mq library to our link directive
-target_link_libraries(udp_vpe_sender ${ZeroMQ_LIBRARY})
+# target_link_libraries(udp_vpe_sender ${ZeroMQ_LIBRARY})
